[gd_scene load_steps=3 format=3 uid="uid://rqtbhx542oop"]

[ext_resource type="Script" uid="uid://cye55deslgr4f" path="res://scripts/moving_platform.gd" id="1_gyxw7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x17fs"]
size = Vector3(2.42285, 1.30383, 2.03613)

[node name="MovingPlatform" type="CSGBox3D"]
use_collision = true
size = Vector3(3, 1, 3)
script = ExtResource("1_gyxw7")
speed = 2.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.151917, 0)
shape = SubResource("BoxShape3D_x17fs")

[connection signal="body_entered" from="Area3D" to="." method="on_area_entered"]
[connection signal="body_exited" from="Area3D" to="." method="on_area_exited"]
